# strigoi-bevy

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  project.code-workspace  util.nix
assets/maps/: base_world.ldtk
assets/sprites/: player.aseprite
editor/: Cargo.toml
editor/src/: main.rs  plugin.rs  state.rs  util.rs
editor/src/components/: console.rs  editor.rs  menubar.rs  mod.rs  tabviewer.rs
engine/: Cargo.toml
engine/src/: assets.rs  camera.rs  config.rs  lib.rs  prelude.rs
engine/src/bundles/: mod.rs
engine/src/bundles/player/: assets.rs  bindings.rs  components.rs  mod.rs  systems.rs
macros/: Cargo.toml
macros/proc_macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
