[package]
name = "strigoi"
version = "0.1.0"
edition = "2021"

[features]
default = ["development"]
development = ["bevy/dynamic_linking"]

[workspace]
resolver = "2"
members = ["./engine", "./editor"]

[workspace.dependencies]
bevy = { version = "0.12.0" }
bevy_ecs_ldtk = { version = "0.9.0", features = ["atlas"] }
bevy_pancam = { version = "0.10.0" }
bevy_mod_picking = { version = "0.17" }

[dependencies]
bevy = { workspace = true }
engine = { path = "./engine" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
