[package]
name = "strigoi"
version = "0.1.0"
edition = "2021"

[features]
default = ["development"]
development = ["bevy/dynamic_linking"]

[workspace]
resolver = "2"
members = ["./engine", "./editor"]

[workspace.dependencies]
bevy = { version = "0.13.2" }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", rev = "617b108", features = [
    "atlas",
] }
bevy_pancam = { version = "0.11.1" }
bevy_mod_picking = { version = "0.18.2" }
bevy_quickmenu = { git = "https://github.com/terhechte/bevy_quickmenu", rev = "b300723" }

[dependencies]
bevy = { workspace = true }
engine = { path = "./engine" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
